--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ body {
 
 .App {
   text-align: center;
-  padding: 20px;
+  padding: 0 20px;  /* Removed top padding */
 }
 
 .banner {
@@ -17,13 +17,30 @@ body {
   font-size: 24px;
   font-weight: bold;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+  position: sticky;
+  top: 0;
+  margin-top: -240px;
+  z-index: 1000;  
+}
+.main-form{
+  padding: 10px;
+  margin-top: 50px;
 }
 
 .tabs {
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
+  padding: 10px;
+  border-radius: 10px;
+  margin-top: 5px; 
+  background-color: white;  
+  position: sticky;
+  top: 77px;  
+  z-index: 999; 
+
 }
+
 
 .tab {
   background-color: #007bff;
@@ -77,6 +94,7 @@ body {
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
 }
 
 .subform-title {
@@ -87,10 +105,15 @@ body {
 }
 
 .title-input {
-  font-size: 24px;
+  font-size: 18px;
   padding: 5px;
   width: calc(100% - 12px);
   margin-bottom: 10px;
+}
+
+.header-cell {
+  font-weight: bold;
+  margin-right: 10px;
 }
 
 .headers {
@@ -113,6 +136,12 @@ body {
   margin: 10px 0;
   padding: 0 10px;
   align-items: center;
+  margin-bottom: 10px;
+}
+
+.row-cell {
+  flex: 1;
+  margin-right: 10px;
 }
 
 .row span, .row input {
@@ -128,23 +157,29 @@ body {
   height: 30px;
 }
 
-.number-input {
+
+
+.number-input[type="number"] {
   width: 80px;
+  margin-right: 10px;
 }
 
-.item-input {
+.item-input[type="text"] {
   width: 150px;
+  flex: 1;
+  margin-right: 10px;
 }
 
 .remove-button {
-  background-color: #dc3545;
-  color: white;
+  color: black;
   border: none;
   padding: 5px 10px;
+  background-color: greenyellow;
   cursor: pointer;
   border-radius: 5px;
   font-size: 14px;
   transition: background-color 0.3s ease;
+  margin-left: 10px;
 }
 
 .remove-button:hover {
@@ -161,6 +196,7 @@ body {
   border-radius: 5px;
   font-size: 16px;
   transition: background-color 0.3s ease;
+  margin-top: 10px;
 }
 
 .add-row-button:hover {
@@ -173,3 +209,21 @@ body {
   font-size: 18px;
   color: #333;
 }
+
+.header-row{
+  display: flex;
+  justify-content: space-evenly;
+  background-color: grey;
+  width: 100%;
+  border-radius: 10px;
+  padding: 5px;
+}
+.header-cell{
+  margin-right: 50px;
+  color: white;
+}
+.remove-project-button{
+background-color: red;
+color: black;
+}
+
